ツイート詳細画面を3分の1くらい作ったりした、あとは忘れた

--- a/Yukari/src/main/res/layout/activity_test.xml
+++ b/Yukari/src/main/res/layout/activity_test.xml
@@ -14,4 +14,13 @@
             android:layout_alignParentBottom="true"
             android:id="@+id/frame">
     </FrameLayout>
+
+    <FrameLayout
+            android:layout_width="fill_parent"
+            android:layout_height="30dp"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:id="@+id/tweetgesture">
+    </FrameLayout>
 </RelativeLayout>
