--- a/Yukari/src/main/res/values-v11/styles.xml
+++ b/Yukari/src/main/res/values-v11/styles.xml
@@ -8,6 +8,19 @@
         <!-- API 11 theme customizations can go here. -->
     </style>
 
+    <style name="AppDialogTheme" parent="android:Theme.Holo.Light.Dialog"></style>
+
+    <style name="VertAnimationTheme" parent="android:Theme.Holo.Light.Dialog">
+        <item name="android:windowAnimationStyle">@style/Animation.Vert</item>
+    </style>
+    <style name="Animation" parent="android:Animation" />
+    <style name="Animation.Vert" parent="android:Animation.Activity">
+        <item name="android:activityOpenEnterAnimation">@anim/activity_tweet_open_enter</item>
+        <item name="android:activityOpenExitAnimation">@anim/activity_tweet_open_exit</item>
+        <item name="android:activityCloseEnterAnimation">@anim/activity_tweet_close_enter</item>
+        <item name="android:activityCloseExitAnimation">@anim/activity_tweet_close_exit</item>
+    </style>
+
     <style name="AppThemeNoTitle" parent="android:Theme.Holo.Light.NoActionBar"></style>
 
 </resources>
