--- a/YukariProject/Yukari/src/main/res/layout/activity_tweet.xml
+++ b/YukariProject/Yukari/src/main/res/layout/activity_tweet.xml
@@ -40,7 +40,7 @@
             android:text="140"
             android:id="@+id/tvTweetCount"
             android:layout_below="@+id/imageView"
-            android:layout_alignLeft="@+id/textView"
+            android:layout_alignLeft="@+id/tvTweetTitle"
             android:layout_marginTop="8dp"/>
 
     <TextView
@@ -158,7 +158,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Tweet"
-            android:id="@+id/textView"
+            android:id="@+id/tvTweetTitle"
             android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"/>
 
@@ -166,7 +166,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/imageView"
-            android:layout_below="@+id/textView"
+            android:layout_below="@+id/tvTweetTitle"
             android:layout_alignLeft="@+id/etTweetInput"
             android:src="@android:drawable/divider_horizontal_textfield"
             android:layout_alignParentRight="true"
