フォントの展開ダイアログの表示を変更 ステータス画面のLinkタブ開発開始、URLは一応踏める　DMまだ、プロフィールまだ、ハッシュ検索もまだ 画像ビューアActivity欲しいですね

--- a/Yukari/src/main/res/layout/fragment_status_main.xml
+++ b/Yukari/src/main/res/layout/fragment_status_main.xml
@@ -20,7 +20,7 @@
             <include
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    layout="@layout/raw_tweet"
+                    layout="@layout/row_tweet"
                     android:layout_gravity="center"
                     android:id="@+id/status_tweet"
                     />
