--- a/YukariProject/Yukari/src/main/res/values-v11/styles.xml
+++ b/YukariProject/Yukari/src/main/res/values-v11/styles.xml
@@ -23,4 +23,9 @@
 
     <style name="AppThemeNoTitle" parent="android:Theme.Holo.Light.NoActionBar"></style>
 
+    <style name="AppThemeTranslucent" parent="android:Theme.Holo.Light.NoActionBar">
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+    </style>
+
 </resources>
