モールスコーデックを実装、モールス符号の送受信が可能になった モールス符号化のActivityは、マッシュルームとして外部から呼び出し可能

--- a/Yukari/src/main/res/layout/activity_tweet.xml
+++ b/Yukari/src/main/res/layout/activity_tweet.xml
@@ -133,8 +133,14 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/ibTweetVoiceInput"
-                    android:layout_column="1"
                     android:src="@drawable/ic_voice_input"
+                    />
+
+            <ImageButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/ibTweetMorseInput"
+                    android:src="@drawable/ic_morse"
                     />
 
             <ImageButton
